<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screen.register.RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ic_dog"
            android:layout_width="250dp"
            android:layout_height="200dp"
            android:layout_marginTop="35dp"
            app:layout_constraintBottom_toTopOf="@+id/etName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etName"
            style="@style/EditText"
            android:layout_marginTop="15dp"
            android:drawableEnd="@drawable/ic_person"
            android:hint="@string/hint_name"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@id/etLastName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ic_dog" />

        <EditText
            android:id="@+id/etLastName"
            style="@style/EditText"
            android:layout_marginTop="10dp"
            android:drawableEnd="@drawable/ic_person"
            android:hint="@string/hint_name"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@id/etEmail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etName" />

        <EditText
            android:id="@+id/etEmail"
            style="@style/EditText"
            android:drawableEnd="@drawable/ic_email"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toTopOf="@id/etPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etLastName" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:hintEnabled="false"
            app:layout_constraintBottom_toTopOf="@id/etConfirmPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etEmail"
            app:passwordToggleDrawable="@drawable/ic_padlock"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/dark_blue">

            <EditText
                style="@style/EditText"
                android:hint="@string/hint_password"
                android:inputType="numberPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etConfirmPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:hintEnabled="false"
            app:layout_constraintBottom_toTopOf="@id/btRegister"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etPassword"
            app:passwordToggleDrawable="@drawable/ic_padlock"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/dark_blue">

            <EditText
                style="@style/EditText"
                android:hint="@string/hint_password"
                android:inputType="numberPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btRegister"
            style="@style/Button"
            android:text="@string/text_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etConfirmPassword" />

        <TextView
            android:id="@+id/tvLogin"
            style="@style/TextView"
            android:text="@string/text_login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btRegister" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>